# serp-to-prompt-writer

./: .gitignore  3-31_issues.md  CMakeLists.txt  MANUAL.md  README.md  seed_idea.txt  vcpkg.json
data/: blocklist.txt  user_agents.txt  wiki_freq.txt
include/: app_log.h  config.h  database.h  engine.h  filter.h  js_render.h  nli.h  nlp.h  onnx_nlp.h  prompt.h  proxy.h  resmon.h  resources.h  scraper.h  serper.h  sysinfo.h  threadpool.h  tui.h  utils.h
src/: app_log.c  config.c  database.c  engine.c  filter.c  js_render.c  main.c  nli.c  nlp.c  onnx_nlp.c  prompt.c  proxy.c  resmon.c  resources.rc  scraper.c  serper.c  sysinfo.c  test_smoke.c  threadpool.c  tui.c  utils.c
